@@ -1,3 +1,8 @@
+2009-03-07  Badlop  <badlop@process-one.net>
+
+	* src/mod_privacy.erl: Temporary workaround to inconsistency
+	* src/mod_privacy_odbc.erl: Likewise
+
 2009-03-06  Badlop  <badlop@process-one.net>
 
 	* src/eldap/eldap.erl: moves waiting for response queries to
